entity_macros/tests/ui/derive/ent/duplicate-database.stderr
error: Already have a database elsewhere
  --> $DIR/duplicate-database.rs:12:5
   |
12 |     database2: Option<Box<dyn Database>>,
   |     ^^^^^^^^^
